--- a/index.html
+++ b/index.html
@@ -588,6 +588,95 @@
                     </div>
                 </div>
             </section>
+            <section class="clients">
+                <div class="container">
+                    <h3 class="title_xl">Наши клиенты</h3>
+                    <div class="clients_wrap">
+                        <div class="swiper-container clint_slider">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                  <div class="clients_item">
+                                        <div class="clients_item_sm">
+                                            <img src="img/home/clients.png" alt="clients">
+                                            <span>До</span>
+                                        </div>
+                                        <div class="clients_item_sm">
+                                            <span>После</span>
+                                            <img src="img/home/clients.png" alt="clients">
+                                        </div>
+                                  </div>
+                              </div>
+                              <div class="swiper-slide">
+                                <div class="clients_item">
+                                      <div class="clients_item_sm">
+                                          <img src="img/home/clients.png" alt="clients">
+                                          <span>До</span>
+                                      </div>
+                                      <div class="clients_item_sm">
+                                          <span>После</span>
+                                          <img src="img/home/clients.png" alt="clients">
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="clients_item">
+                                      <div class="clients_item_sm">
+                                          <img src="img/home/clients.png" alt="clients">
+                                          <span>До</span>
+                                      </div>
+                                      <div class="clients_item_sm">
+                                          <span>После</span>
+                                          <img src="img/home/clients.png" alt="clients">
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="clients_item">
+                                      <div class="clients_item_sm">
+                                          <img src="img/home/clients.png" alt="clients">
+                                          <span>До</span>
+                                      </div>
+                                      <div class="clients_item_sm">
+                                          <span>После</span>
+                                          <img src="img/home/clients.png" alt="clients">
+                                      </div>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="clients_item">
+                                      <div class="clients_item_sm">
+                                          <img src="img/home/clients.png" alt="clients">
+                                          <span>До</span>
+                                      </div>
+                                      <div class="clients_item_sm">
+                                          <span>После</span>
+                                          <img src="img/home/clients.png" alt="clients">
+                                      </div>
+                                </div>
+                            </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="gallery">
+                <div class="container">
+                    <h3 class="gallery_title">Более <span>200000 женщин</span> уже обрели новые талии</h3>
+                    <div class="gallery_wrap">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                        <img src="img/home/setka.png" alt="setka">
+                    </div>
+                </div>
+            </section>
             <section class="difference_2">
                 <div class="container">
                     <h3 class="title_xl">Чем отличаются корсеты</h3>
