--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -200,7 +200,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -234,7 +234,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -268,7 +268,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -302,7 +302,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -336,7 +336,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -370,7 +370,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -404,7 +404,7 @@
                                 <span style="background: #CFA97E;"></span>
                             </div>
                             <div class="item_btn">
-                                <a href="#">Подробнее</a>
+                                <a class="popup-with-zoom-anim" href="#item">Подробнее</a>
                                 <a href="#">
                                     <img src="img/home/bug.svg" alt="bug">
                                 </a>
@@ -853,7 +853,7 @@
                 <div class="container">
                     <h4 class="newsletter_title">оставайся в курсе всех наших новинок!</h4>
                     <p class="newsletter_text">Подпишись на новостную рассылку и узнавай обо всех новинках и эксклюзивных предложениях первым.</p>
-                    <form>
+                    <form class="newsletter_form">
                         <input type="email" placeholder="Email">
                         <button type="submit">Отправить</button>
                     </form>
@@ -989,6 +989,137 @@
             <p>2016-2021 Все права защищены. WaistShop</p>
         </div>
     </div>
+
+    <a class="popup-with-zoom-anim thank_click" href="#thank"></a>
+
+    <div id="thank" class="zoom-anim-dialog thank_modal mfp-hide">
+        <p class="thank_title">Благодарим!</p>
+        <p class="thank_text">Теперь ты первым будешь узнавать  обо всех наших новинках и эксклюзивных предложениях первым.</p>
+    </div>
+
+    <div id="item" class="zoom-anim-dialog item_modal mfp-hide">
+        <div class="item_modal_slider">
+            <div class="swiper-container item_slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="item_img">
+                            <span>-10%</span>
+                            <img src="img/modal/modal.png" alt="modal">
+                            <a href="#">Какая посадка</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+        <p class="item_modal_title">Латексная дышащая майка Vest AIR с 6-ю рядами</p>
+        <div class="reviews_wrap">
+            <div class="star">
+                <img src="img/home/star.svg" alt="star">
+                <img src="img/home/star.svg" alt="star">
+                <img src="img/home/star.svg" alt="star">
+                <img src="img/home/star.svg" alt="star">
+                <img src="img/home/star.svg" alt="star">
+            </div>
+            <a href="#">2573 отзывов</a>
+        </div>
+        <div class="choice_color">
+            <span style="background: #232323;"></span>
+            <span style="background: #DCC8B2;"></span>
+            <span style="background: #B29A7E;"></span>
+            <span style="background: #CFA97E;"></span>
+        </div>
+        <div class="size_top">
+            <p>Размерная сетка</p>
+            <p>Соответствует размеру <span>99%</span></p>
+        </div>
+        <div class="modal_size_wrap">
+            <div class="size_item">S</div>
+            <div class="size_item active">M</div>
+            <div class="size_item">L</div>
+            <div class="size_item">XL</div>
+            <div class="size_item disabled">2XL</div>
+            <div class="size_item disabled">3XL</div>
+            <div class="size_item">4XL</div>
+            <div class="size_item">5XL</div>
+        </div>
+        <a href="#" class="modal_size"><img src="img/modal/size.svg" alt="size"> Калькулятор размера</a>
+        <p class="modal_price">6 990 руб</p>
+        <p class="warning">В данном размере остался 1 товар.<br> Поспешите!</p>
+        <div class="item_modal_btn">
+            <a href="#">Купить</a>
+            <div class="select">
+                <select name="">
+                    <option value="1">1</option>
+                    <option value="1">2</option>
+                    <option value="1">3</option>
+                    <option value="1">4</option>
+                </select>
+                <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.76525 7.632C6.55152 7.632 6.33782 7.5504 6.17487 7.38753L1.04725 2.25985C0.721066 1.93367 0.721066 1.40482 1.04725 1.07877C1.3733 0.752716 1.90205 0.752716 2.22826 1.07877L6.76525 5.61602L11.3023 1.07893C11.6284 0.752874 12.1571 0.752874 12.4832 1.07893C12.8095 1.40498 12.8095 1.93383 12.4832 2.26001L7.35562 7.38769C7.19259 7.55058 6.97889 7.632 6.76525 7.632Z" fill="black"/>
+                    </svg>                    
+            </div>
+        </div>
+        <div class="item_modal_bottom">
+            <div class="item_bottom">
+                <img src="img/modal/bot_1.svg" alt="bot">
+                <p class="item_bottom_title">Гарантия производителя - 
+                    90 дней.</p>
+                <p class="item_bottom_text">Удобный обмен товара - 14 дней 
+                    с момента получение.</p>
+            </div>
+            <div class="item_bottom">
+                <img src="img/modal/bot_2.svg" alt="bot">
+                <p class="item_bottom_title">Все еще остались вопросы?</p>
+                <p class="item_bottom_text">Все в порядке. Наш <a href="#">эксперт</a> поможет вам подобрать идеальный размер.</p>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/magnific-popup.min.js"></script>
