--- a/index.html
+++ b/index.html
@@ -985,7 +985,14 @@
             </div>
         </footer>
         <div class="footer_bottom">
-            <img src="img/footer/footer_bottom.svg" alt="footer">
+            <div class="footer_icon">
+                <img src="img/footer/1.svg"   alt="footer">
+                <img src="img/footer/2.svg"  alt="footer">
+                <img src="img/footer/3.svg"   alt="footer">
+                <img src="img/footer/4.svg"   alt="footer">
+                <img src="img/footer/5.svg"   alt="footer">
+                <img src="img/footer/6.svg"  alt="footer">
+            </div>
             <p>2016-2021 Все права защищены. WaistShop</p>
         </div>
     </div>
