--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <div class="wrapper">
         <div class="bg"></div>
-        <header class="padding">
-            <div class="container">
+        <header>
+            <div class="container padding">
                 <div class="header_wrap">
                     <div class="headr_left">
                         <img src="img/header/menu.svg" class="menu" alt="menu">
@@ -78,10 +78,10 @@
                     </div> 
                 </nav>
             </div>
+            <div class="header_bottom">
+                <p>Поспешите! Скидки до 30% до конца сентября.</p>
+            </div>
         </header>
-        <div class="header_bottom">
-            <p>Поспешите! Скидки до 30% до конца сентября.</p>
-        </div>
         <main>
             <div class="home_img">
                 <img src="img/home/home.png" alt="home_img">
