--- a/favorite_disabled.html
+++ b/favorite_disabled.html
@@ -19,23 +19,23 @@
             <div class="container">
                 <div class="header_wrap">
                     <div class="headr_left">
-                        <img src="img/header/menu.svg" class="menu" alt="menu">
-                        <img src="img/header/search.svg" alt="search">
+                        <img src="img/header/menu.svg" class="menu" loading="lazy" alt="menu">
+                        <img src="img/header/search.svg" loading="lazy" alt="search">
                     </div>
                     <div class="header_logo">
-                        <img src="img/footer/footer_logo.svg" height="45" width="125" alt="logo">
+                        <img src="img/footer/footer_logo.svg" height="45" width="125" loading="lazy" alt="logo">
                     </div>
                     <div class="header_right">
                         <a href="#">
-                            <img src="img/header/heart.svg" alt="heart">
+                            <img src="img/header/heart.svg" loading="lazy" alt="heart">
                         </a>
                         <a href="#">
-                            <img src="img/header/bug.svg" alt="bug">
+                            <img src="img/header/bug.svg" loading="lazy" alt="bug">
                         </a>
                     </div>
                 </div>
                 <nav>
-                    <img src="img/header/close.svg" class="close_icon" alt="close">
+                    <img src="img/header/close.svg" class="close_icon" loading="lazy" alt="close">
                     <ul>
                         <li>
                             <a href="#">Войти в личный кабинет</a>
@@ -55,22 +55,22 @@
                     </ul>
                     <div class="social_wrap">
                         <a href="#">
-                            <img src="img/footer/insta.svg" height="34" width="34" alt="social">
+                            <img src="img/footer/insta.svg" height="34" width="34" loading="lazy" alt="social">
                         </a>
                         <a href="#">
-                            <img src="img/footer/fb.svg" height="34" width="34" alt="social">
+                            <img src="img/footer/fb.svg" height="34" width="34" loading="lazy" alt="social">
                         </a>
                         <a href="#">
-                            <img src="img/footer/tiktok.svg" height="34" width="34" alt="social">
+                            <img src="img/footer/tiktok.svg" height="34" width="34" loading="lazy" alt="social">
                         </a>
                         <a href="#">
-                            <img src="img/footer/vk.svg" height="34" width="34" alt="social">
+                            <img src="img/footer/vk.svg" height="34" width="34" loading="lazy" alt="social">
                         </a>
                         <a href="#">
-                            <img src="img/footer/yt.svg" height="34" width="34" alt="social">
+                            <img src="img/footer/yt.svg" height="34" width="34" loading="lazy" alt="social">
                         </a>
                         <a href="#">
-                            <img src="img/footer/ws.svg" height="34" width="34" alt="social">
+                            <img src="img/footer/ws.svg" height="34" width="34" loading="lazy" alt="social">
                         </a>
                     </div> 
                 </nav>
@@ -92,7 +92,7 @@
         </main>
         <footer class="padding">
             <div class="container">
-                <img src="img/footer/footer_logo.svg" class="footer_logo" alt="logo">
+                <img src="img/footer/footer_logo.svg" class="footer_logo" loading="lazy" alt="logo">
                 <p class="newsletter_title">Подпишись и получи скидку 10%</p>
                 <form class="newsletter_form">
                     <input type="email" name="mail_news" placeholder="Введите e-mail">
@@ -104,22 +104,22 @@
                 </form>
                 <div class="footer_social">
                     <a href="#">
-                        <img src="img/footer/insta.svg" height="34" width="34" alt="social">
+                        <img src="img/footer/insta.svg" height="34" width="34" loading="lazy" alt="social">
                     </a>
                     <a href="#">
-                        <img src="img/footer/fb.svg" height="34" width="34" alt="social">
+                        <img src="img/footer/fb.svg" height="34" width="34" loading="lazy" alt="social">
                     </a>
                     <a href="#">
-                        <img src="img/footer/tiktok.svg" height="34" width="34" alt="social">
+                        <img src="img/footer/tiktok.svg" height="34" width="34" loading="lazy" alt="social">
                     </a>
                     <a href="#">
-                        <img src="img/footer/vk.svg" height="34" width="34" alt="social">
+                        <img src="img/footer/vk.svg" height="34" width="34" loading="lazy" alt="social">
                     </a>
                     <a href="#">
-                        <img src="img/footer/yt.svg" height="34" width="34" alt="social">
+                        <img src="img/footer/yt.svg" height="34" width="34" loading="lazy" alt="social">
                     </a>
                     <a href="#">
-                        <img src="img/footer/ws.svg" height="34" width="34" alt="social">
+                        <img src="img/footer/ws.svg" height="34" width="34" loading="lazy" alt="social">
                     </a>
                 </div>
                 <div class="footer_nav">
@@ -154,12 +154,12 @@
         </footer>
       <div class="footer_bottom">
             <div class="footer_icon">
-                <img src="img/footer/1.svg"   alt="footer">
-                <img src="img/footer/2.svg"  alt="footer">
-                <img src="img/footer/3.svg"   alt="footer">
-                <img src="img/footer/4.svg"   alt="footer">
-                <img src="img/footer/5.svg"   alt="footer">
-                <img src="img/footer/6.svg"  alt="footer">
+                <img src="img/footer/1.svg"   loading="lazy" alt="footer">
+                <img src="img/footer/2.svg"  loading="lazy" alt="footer">
+                <img src="img/footer/3.svg"   loading="lazy" alt="footer">
+                <img src="img/footer/4.svg"   loading="lazy" alt="footer">
+                <img src="img/footer/5.svg"   loading="lazy" alt="footer">
+                <img src="img/footer/6.svg"  loading="lazy" alt="footer">
             </div>
             <p>2016-2021 Все права защищены. WaistShop</p>
         </div>
