--- a/favorite.html
+++ b/favorite.html
@@ -94,9 +94,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #9f5025;">Best seller</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -128,9 +127,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #000;">10%</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -162,9 +160,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #9f5025;">Best seller</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -196,9 +193,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #000;">10%</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -230,9 +226,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #9f5025;">Best seller</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -264,9 +259,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #000;">10%</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -298,9 +292,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #9f5025;">Best seller</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
@@ -332,9 +325,8 @@
                             <div class="item_wrap_img">
                                 <span style="background: #000;">10%</span>
                                 <img src="img/home/item_img.png" class="item_img" loading="lazy" alt="item_img">
-                                <a href="#" class="favorite">
-                                    <img src="img/home/favorite_dis.svg" loading="lazy" alt="dis">
-                                    <img src="img/home/favorite_act.svg" loading="lazy" alt="act">
+                                <a href="#" class="delete_prod">
+                                    <img src="img/home/close_i.svg" alt="close">
                                 </a>
                             </div>
                             <p class="item_title">Латексная Дышащая майка Vest AIR с 3-мя рядами</p>
