--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         </a>
                         <a href="#">
                             <img src="img/header/bug.svg" loading="lazy" alt="bug">
+                            <span>0</span>
                         </a>
                     </div>
                 </div>
@@ -818,7 +819,7 @@
                                 <li>За границу курьером — от 700р. От 3 до 20 дней</li>
                                 <li>Доставка Почтой от 380р. От 3 до 17 дней</li>
                                 <li>Примерка перед покупкой в Москве и Санкт-Петербурге, доставка на следующий день</li>
-                                <li>Самовывоз в Москве: адрес</li>
+                                <li>Самовывоз в Москве: <a href="#">адрес</a></li>
                             </ul>
                         </div>
                     </div>
