--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <img src="img/header/search.svg" loading="lazy" alt="search">
                     </div>
                     <div class="header_logo">
-                        <img src="img/footer/footer_logo.png" height="45" width="125" loading="lazy" alt="logo">
+                        <img src="img/footer/footer_logo.svg" height="45" width="125" loading="lazy" alt="logo">
                     </div>
                     <div class="header_right">
                         <a href="#">
@@ -925,7 +925,7 @@
         </main>
         <footer class="padding">
             <div class="container">
-                <img src="img/footer/footer_logo.png" class="footer_logo" loading="lazy" alt="logo">
+                <img src="img/footer/footer_logo.svg" class="footer_logo" loading="lazy" alt="logo">
                 <p class="newsletter_title">Подпишись и получи скидку 10%</p>
                 <form class="newsletter_form">
                     <input type="email" name="mail_news" placeholder="Введите e-mail">
